<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_backup"
        android:title="@string/backup_data"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_restore"
        android:title="@string/restore_data"
        android:orderInCategory="101"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_json"
        android:title="@string/export_json"
        android:orderInCategory="102"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_manage_projects"
        android:title="@string/manage_projects"
        android:orderInCategory="103"
        app:showAsAction="never" />

</menu>
